# rust-oddor-h-shift

./: Cargo.toml  README.md  default.nix  flake.nix  module.nix  shell.nix
src/: constants.rs  errors.rs  main.rs  shifter.rs  usb_shifter.rs
